--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "stripe-samples",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "stripe": "^17.5.0-beta.1"
